# MLops-Project

./: .gitignore  README.md  mlflow.db  pyproject.toml
mlops_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: churn_analysis_users.ipynb
scripts/: run_train.py
src/data/: feature_engineering.py  load_data.py  preprocess.py
src/models/: train.py
tests/: test_data.py  test_preprocess.py  test_train.py
