[project]
name = "mlops-project"
version = "0.1.0"
description = "Customer churn prediction MLOps project"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.4,<1.9",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mlflow>=2.15.0",
    "setuptools",
]

# ------------------------
# Pytest configuration
# ------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

# ------------------------
# Black configuration
# ------------------------
[tool.black]
line-length = 88

# ------------------------
# Ruff configuration
# ------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
packages = ["src"]
